--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "angular": "^1.8.2",
     "angular-route": "^1.8.2",
+    "bootstrap": "^4.5.3",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^4.0.1",
     "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "jquery": "^3.5.1"
   }
 }
